# HitchPlay

./: .gitignore  .gitmodules  README.md
LeoRover-SLAM-ROS2/: nav2_simple.yaml
rviz/: README.md  leo_rover.rviz  xbox_leo_unified.py  xbox_return_to_base.py  xbox_teleop_full.py
rviz/src/leo_xbox_controller/: leo_xbox_controller.py
rviz/src/leo_xbox_controller/launch/: leo_xbox_launch.py
src/: INSTRUCTIONS.md  INSTRUCTIONS_CN.md  leo_bringup.launch.xml  mapper_params_online_async.yaml  start-all.sh  start_all.sh
src/LeoRover-SLAM-ROS2/: nav2_simple.yaml
src/custom_drive_pkg/: CMakeLists.txt  README.md  package.xml  sequential_drive_service.cpp
src/custom_drive_pkg/msg/: DriveStep.msg
src/custom_drive_pkg/src/: drive_publisher.cpp  drive_service.cpp  sequential_drive_service.cpp
src/custom_drive_pkg/srv/: DriveCommand.srv  SequentialDriveCommand.srv
src/drive_ros2_ws/src/drive_pkg/: CMakeLists.txt  package.xml
src/drive_ros2_ws/src/drive_pkg/src/: drive_publisher.cpp
third-party-licenses/: qualcomm-bsd3-clause.txt
ursa/: README.md
ursa/android/ChatApp/: README.md  build.gradle
ursa/android/ChatApp/src/main/: AndroidManifest.xml
ursa/android/ChatApp/src/main/cpp/: PromptHandler.cpp
ursa/android/ChatApp/src/main/java/com/chatgptlite/wanted/: MainActivity.kt
ursa/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/: NavRoute.kt
ursa/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/common/: AppBar.kt  AppDrawer.kt
ursa/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/settings/advance/: Advance.kt
ursa/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/settings/controller/: Controller.kt  ControllerViewModel.kt
ursa/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/settings/occupancy/: OccupancyViewModel.kt
ursa/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/settings/rover/: RoverSettings.kt  RoverSettingsViewModel.kt
ursa/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/settings/telemetry/: Telemetry.kt  TelemetryViewModel.kt
ursa/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/settings/terminal/: TerminalViewModel.kt  terminal.kt
ursa/android/ChatApp/src/main/res/values/: strings.xml
ursa/apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/: MainActivity.kt
ursa/apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/constants/: Constants.kt
ursa/apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/common/: AppBar.kt  AppScaffold.kt
ursa/apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/settings/controller/: Controller.kt  ControllerViewModel.kt
ursa/apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/settings/prompt/: PromptSettingPage.kt
ursa/apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/settings/rover/: RoverSettingsViewModel.kt
ursa/apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/settings/telemetry/: Telemetry.kt  TelemetryViewModel.kt
ursa/apps/windows/cpp/ChatApp/: ChatApp.vcxproj
ursa/apps/windows/cpp/ObjectDetection/: ObjectDetectionApp.cpp
